Trained delta DAGMM model for Cifar10 with 10 clients. Adjusted hyperparameters of attacks and detections.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  delta_dagmm\n",
-      "Selected 0 malicious clients out of 10\n",
-      "Malicious client IDs: []\n",
-      "num_gpus:  0.1\n"
+      "Using the detection method:  wef\n",
+      "Selected 10 malicious clients out of 100\n",
+      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
+      "num_gpus:  0.041666666666666664\n"
      ]
     }
    ],
@@ -46,13 +46,13 @@
     "DATASET = DatasetNames.cifar10\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 10\n",
+    "NUM_CLIENTS = 100\n",
     "\n",
     "# Number of federation rounds\n",
     "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.0\n",
+    "PERCENT_MALICIOUS = 0.1\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
@@ -61,10 +61,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.no_attack\n",
+    "ATTACK_METHOD = AttackNames.adaptive_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
+    "DETECTION_METHOD = DetectionNames.wef_detection\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
@@ -76,7 +76,7 @@
     "# ________________________________________________________________________\n",
     "if DETECTION_METHOD.value == DetectionNames.dagmm_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the DAGMM model.\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm/dagmm_train_data/\" + DATASET.value + \"/run_test_3\"  # Output directory of the training data of the current run.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm/dagmm_train_data/\" + DATASET.value + \"/run_test_2\"  # Output directory of the training data of the current run.\n",
     "\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/dagmm/dagmm_anomaly_threshold.yaml\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 0   # Does not perform the detection in the first x rounds\n",
@@ -102,9 +102,9 @@
     "    }\n",
     "# ________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.delta_dagmm_detection.value:\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = True   # Set to True to collect training data for the Delta-DAGMM model.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the Delta-DAGMM model.\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_test_data_collection\"] = False   # Set to True to collect test data (additionally collects the global model for each iteration)\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/delta_dagmm/dagmm_train_data/\" + DATASET.value + \"/\" + str(NUM_CLIENTS) + \"/run_7\"  # Output directory of the training data of the current run.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/delta_dagmm/dagmm_train_data/\" + DATASET.value + \"/\" + str(NUM_CLIENTS) + \"/run_test_2\"  # Output directory of the training data of the current run.\n",
     "\n",
     "    model_path = \"./dagmm/delta_dagmm/models/\" + DATASET.value + \"/\" + str(NUM_CLIENTS)\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = model_path + \"/dagmm_anomaly_threshold.yaml\"\n",
@@ -153,9 +153,9 @@
     "            epsilon = 0.01\n",
     "    else:\n",
     "        if NUM_CLIENTS == 10:\n",
-    "            epsilon = None\n",
+    "            epsilon = 0.02\n",
     "        else:\n",
-    "            epsilon = None\n",
+    "            epsilon = 0.01\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"epsilon\"] = epsilon    # Determines how strict the threshold distinguishes between benign clients and free riders.\n",
     "                                                        # Choosing a low value results in low FP but may miss free riders whereas a high value may results in FPs.\n",
     "\n",
