Cleaned the config generation notebook.
Added first initial version of a bash script for executing multiple experiments. Also added the generate_config.py script which behaves like the jupyter notebook but can be used by the bash script.

--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f2d1bfa0",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,8 @@
     "from statistics import fmean\n",
     "\n",
     "def get_metrics(base_path):\n",
+    "    if not os.path.exists(base_path):\n",
+    "        raise RuntimeError(f\"Path {base_path} does not exist! The experiment has not been conducted yet!\")\n",
     "    TP_list = []\n",
     "    FP_list = []\n",
     "    FN_list = []\n",
@@ -90,7 +92,7 @@
     "            not_detected_FR = [cid for cid in malicious_clients if cid not in clients_done]\n",
     "            for n_d_FR in not_detected_FR:\n",
     "                effectivenesses.append(0.0)\n",
-    "            effectiveness_all = fmean(effectivenesses)\n",
+    "            effectiveness_all = fmean(effectivenesses) if effectivenesses else 0\n",
     "\n",
     "            effectivenesses_list.append(effectiveness_all)\n",
     "\n",
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e9b30042",
    "metadata": {},
    "outputs": [
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "02eea377",
    "metadata": {},
    "outputs": [],
@@ -167,7 +169,11 @@
     "                    path_name = get_output_path(dataset, n_c, perc_m, attack, detection)\n",
     "                    path = \"./outputs/\" + path_name\n",
     "                    metrics = get_metrics(path)\n",
-    "                    results[path_name] = metrics"
+    "                    results[path_name] = metrics\n",
+    "\n",
+    "    for name in results.keys():\n",
+    "        print(f\"{name}:\\n\", results[name], \"\\n\")\n",
+    "    return results"
    ]
   },
   {
@@ -188,10 +194,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9f5369d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mnist--n=10--0%--no_attack--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.5076402187347413, 'Final_acc_avg': 0.9871} \n",
+      "\n",
+      "mnist--n=100--0%--no_attack--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.21855194568634, 'Final_acc_avg': 0.9342666666666667} \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = DatasetNames.mnist\n",
     "n_clients = [10, 100]\n",
@@ -212,10 +231,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "223f5271",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cifar10--n=10--0%--no_attack--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 17.44803235133489, 'Final_acc_avg': 0.8077666666666667} \n",
+      "\n",
+      "cifar10--n=100--0%--no_attack--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 22.264522767066953, 'Final_acc_avg': 0.6450666666666667} \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = DatasetNames.cifar10\n",
     "n_clients = [10, 100]\n",
