--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,9 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  wef\n",
-      "Selected 10 malicious clients out of 100\n",
-      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
+      "Using the detection method:  no_detection\n",
+      "Selected 0 malicious clients out of 100\n",
+      "Malicious client IDs: []\n",
       "num_gpus:  0.041666666666666664\n"
      ]
     }
@@ -42,8 +42,8 @@
     "# --- --- ---   Experiment Settings   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "\n",
-    "# Dataset: mnist or cifar10\n",
-    "DATASET = DatasetNames.cifar10\n",
+    "# Dataset (mnist or cifar10)\n",
+    "DATASET = DatasetNames.mnist\n",
     "\n",
     "# Number of clients\n",
     "NUM_CLIENTS = 100\n",
@@ -52,7 +52,7 @@
     "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.1\n",
+    "PERCENT_MALICIOUS = 0.0\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
@@ -61,19 +61,21 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.adaptive_attack\n",
+    "ATTACK_METHOD = AttackNames.no_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.wef_detection\n",
+    "DETECTION_METHOD = DetectionNames.no_detection\n",
+    "\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "\n",
-    "# ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ========\n",
+    "# ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ========\n",
     "# This section contains settings and hyperparameters needed for the specific detections and attacks.\n",
-    "# ´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´\n",
+    "# ´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´\n",
+    "# ´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´\n",
     "ADDITIONAL_DETECTION_CONFIG = {}\n",
-    "# ________________________________________________________________________\n",
+    "# ________________________________________________________________________________________________________________________________________________\n",
     "if DETECTION_METHOD.value == DetectionNames.dagmm_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the DAGMM model.\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm/dagmm_train_data/\" + DATASET.value + \"/run_test_2\"  # Output directory of the training data of the current run.\n",
@@ -87,7 +89,7 @@
     "         \"mean\": \"./dagmm/dagmm/gmm_param_mean.pt\",\n",
     "         \"mixture\": \"./dagmm/dagmm/gmm_param_mixture.pt\",\n",
     "    }\n",
-    "# ________________________________________________________________________\n",
+    "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.std_dagmm_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Use DAGMM for performing data collection\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"-----\" \n",
@@ -100,7 +102,7 @@
     "         \"mean\": \"./dagmm/std_dagmm/gmm_param_mean.pt\",\n",
     "         \"mixture\": \"./dagmm/std_dagmm/gmm_param_mixture.pt\",\n",
     "    }\n",
-    "# ________________________________________________________________________\n",
+    "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.delta_dagmm_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the Delta-DAGMM model.\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_test_data_collection\"] = False   # Set to True to collect test data (additionally collects the global model for each iteration)\n",
@@ -116,15 +118,15 @@
     "         \"mean\": model_path + \"/gmm_param_mean.pt\",\n",
     "         \"mixture\": model_path + \"/gmm_param_mixture.pt\",\n",
     "    }\n",
-    "# ________________________________________________________________________\n",
+    "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.rffl_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"alpha\"] = 0.95\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"beta\"] = 1/(3*NUM_CLIENTS)\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"gamma\"] = 0.5 if DATASET.value == \"mnist\" else 0.15  # TODO see if this values are good (0.5 for MNIST and 0.15 for CIFAR10 specified by the authors)\n",
-    "# ________________________________________________________________________\n",
+    "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.fgfl_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"stds\"] = 3    # The amount of standard deviations to substract from the mean. Higher -> higher precision, lower recall. Lower -> lower precision, higher recall\n",
-    "# ________________________________________________________________________\n",
+    "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.fdfl_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"tau\"] = 0.2    # If the cosine similarity of two submitted data distributions for two clients of the same cluster is smaller than tau,\n",
     "                                                # i.e. they are not very similar, the flag counter will be increased (if flag is very high, it will be marked as a free rider).\n",
@@ -132,7 +134,7 @@
     "    method = \"weak\"     # Perform either 'weak' or 'strong' imitation of label distributions.\n",
     "    with open(\"./config/fake_label_distribution.yaml\", \"w\") as f:\n",
     "        yaml.dump({\"method\": method}, f)\n",
-    "# ________________________________________________________________________\n",
+    "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.viceroy_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"omega\"] = 0.525    # History decay factor (value taken from the paper)\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"eta\"] = 0.2        # Reputation update factor (value taken from the paper)\n",
@@ -143,19 +145,9 @@
     "    ADDITIONAL_DETECTION_CONFIG[\"free_rider_threshold\"] = 0.1   # Specify the threshold that separates benign clients from free riders.\n",
     "                                                                # The values it is compared to range from 0 to 1, where 0 denotes a very suspicious client\n",
     "                                                                # and 1 a very unsuspicious one.\n",
-    "# ________________________________________________________________________\n",
+    "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.wef_detection.value:\n",
-    "    epsilon = 0.01\n",
-    "    if DATASET.value == DatasetNames.mnist.value:\n",
-    "        if NUM_CLIENTS == 10:\n",
-    "            epsilon = 0.02\n",
-    "        else:\n",
-    "            epsilon = 0.01\n",
-    "    else:\n",
-    "        if NUM_CLIENTS == 10:\n",
-    "            epsilon = 0.02\n",
-    "        else:\n",
-    "            epsilon = 0.01\n",
+    "    epsilon = 0.02 if NUM_CLIENTS == 10 else 0.01\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"epsilon\"] = epsilon    # Determines how strict the threshold distinguishes between benign clients and free riders.\n",
     "                                                        # Choosing a low value results in low FP but may miss free riders whereas a high value may results in FPs.\n",
     "\n",
@@ -163,87 +155,24 @@
     "if \"dagmm\" in DETECTION_METHOD.value and ADDITIONAL_DETECTION_CONFIG and ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
     "    if PERCENT_MALICIOUS != 0.0 and ATTACK_METHOD != AttackNames.no_attack:\n",
     "        print(\"\\n\\n####### Warning: Performing data collection with malicious clients! Only use if intended! #######\\n\\n\")\n",
-    "# ´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´\n",
+    "# ´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´\n",
+    "# ´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´\n",
     "\n",
+    "# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "ADDITIONAL_ATTACK_CONFIG = {}\n",
     "if ATTACK_METHOD.value == \"random_weights\":\n",
-    "    ADDITIONAL_ATTACK_CONFIG[\"R\"] = 1e-2        # 1e-1 is best against DAGMM/STD-DAGMM and 1e-2 best against Delta-DAGMM\n",
+    "    ADDITIONAL_ATTACK_CONFIG[\"R\"] = 1e-2        # 1e-2 is best against Delta-DAGMM\n",
     "\n",
     "if ATTACK_METHOD.value == \"advanced_free_rider\":\n",
     "    ADDITIONAL_ATTACK_CONFIG[\"n\"] = NUM_CLIENTS\n",
     "# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-    "# ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ========\n",
-    "\n",
+    "# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ========\n",
     "\n",
     "# Store all the necessary settings\n",
-    "# ################################\n",
-    "\n",
-    "num_malicious = max(0, int(NUM_CLIENTS * PERCENT_MALICIOUS))\n",
-    "malicious_clients = sorted(random.sample(range(NUM_CLIENTS), num_malicious))\n",
-    "\n",
-    "print(f\"Selected {num_malicious} malicious clients out of {NUM_CLIENTS}\")\n",
-    "print(\"Malicious client IDs:\", malicious_clients)\n",
-    "\n",
-    "import yaml\n",
-    "\n",
-    "# Store the dataset to use as a .yaml file\n",
-    "with open(\"./config/dataset.yaml\", \"w\") as f:\n",
-    "    yaml.dump({\"dataset\": DATASET.value}, f)\n",
-    "\n",
-    "# Store the list of malicious clients as a .yaml file\n",
-    "with open(\"./config/malicious_clients.yaml\", \"w\") as f:\n",
-    "    yaml.dump({\"malicious_clients\": malicious_clients}, f)\n",
-    "\n",
-    "# Store the attack method as a .yaml file\n",
-    "with open(\"./config/attack_method.yaml\", \"w\") as f:\n",
-    "     yaml.dump({\"attack_method\": ATTACK_METHOD.value}, f)\n",
-    "     if ADDITIONAL_ATTACK_CONFIG:\n",
-    "        yaml.dump(ADDITIONAL_ATTACK_CONFIG, f)\n",
-    "\n",
-    "# Store the detection method as a .yaml file\n",
-    "with open(\"./config/detection_method.yaml\", \"w\") as f:\n",
-    "    yaml.dump({\"detection_method\": DETECTION_METHOD.value}, f)\n",
-    "    if ADDITIONAL_DETECTION_CONFIG:\n",
-    "        yaml.dump(ADDITIONAL_DETECTION_CONFIG, f)\n",
-    "\n",
-    "import toml\n",
-    "\n",
-    "NUM_CORES = 24  # For 13th Gen Intel(R) Core(TM) i9-13900KF\n",
-    "NUM_CPUS = 1\n",
-    "\n",
-    "# When running on GPU, assign an entire GPU for each client\n",
-    "NUM_GPUS = 1/NUM_CLIENTS\n",
-    "min_gpu_perc = 1/NUM_CORES\n",
-    "\n",
-    "if NUM_GPUS < min_gpu_perc:\n",
-    "    NUM_GPUS = min_gpu_perc\n",
-    "    \n",
-    "print(\"num_gpus: \", NUM_GPUS)\n",
-    "\n",
-    "# Generate the name of the run.\n",
-    "from evaluation.utils import get_output_path\n",
-    "RUN_NAME = get_output_path(DATASET, NUM_CLIENTS, int(PERCENT_MALICIOUS*100), ATTACK_METHOD, DETECTION_METHOD)\n",
-    "with open(\"run_name.yaml\", \"w\") as f:\n",
-    "    yaml.dump({\"RUN_NAME\": RUN_NAME}, f)\n",
-    "\n",
-    "# Load pyproject.toml\n",
-    "with open(\"pyproject.toml\", \"r\") as f:\n",
-    "    data = toml.load(f)\n",
-    "\n",
-    "# Modify the values\n",
-    "data[\"tool\"][\"flwr\"][\"app\"][\"config\"][\"num-server-rounds\"] = NUM_ROUNDS\n",
-    "data[\"tool\"][\"flwr\"][\"app\"][\"config\"][\"fraction-fit\"] = FRACTION_FIT\n",
-    "data[\"tool\"][\"flwr\"][\"app\"][\"config\"][\"use-wandb\"] = USE_WANDB\n",
-    "\n",
-    "data[\"tool\"][\"flwr\"][\"federations\"][\"local-sim\"][\"options\"][\"num-supernodes\"] = NUM_CLIENTS\n",
-    "data[\"tool\"][\"flwr\"][\"federations\"][\"local-sim-gpu\"][\"options\"][\"num-supernodes\"] = NUM_CLIENTS\n",
-    "data[\"tool\"][\"flwr\"][\"federations\"][\"local-sim-gpu\"][\"options\"][\"backend\"][\"client-resources\"][\"num-cpus\"] = NUM_CPUS\n",
-    "data[\"tool\"][\"flwr\"][\"federations\"][\"local-sim-gpu\"][\"options\"][\"backend\"][\"client-resources\"][\"num-gpus\"] = NUM_GPUS\n",
-    "\n",
-    "# Save changes back to pyproject.toml\n",
-    "with open(\"pyproject.toml\", \"w\") as f:\n",
-    "    toml.dump(data, f)"
+    "from util import store_necessary_settings\n",
+    "store_necessary_settings(NUM_CLIENTS, PERCENT_MALICIOUS, DATASET, ATTACK_METHOD, ADDITIONAL_ATTACK_CONFIG, DETECTION_METHOD, ADDITIONAL_DETECTION_CONFIG, NUM_ROUNDS, FRACTION_FIT, USE_WANDB)"
    ]
   }
  ],
