Fixed bug in random weights attack. Adjusted Hyperparameters for Delta DAGMM. Added shell script to automatically execute multiple experiments one after another.

--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f2d1bfa0",
    "metadata": {},
    "outputs": [],
@@ -118,32 +118,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e9b30042",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'TP_avg': 10.0, 'FP_avg': 3.0, 'FN_avg': 0.0, 'Precision_avg': 0.7692307692307693, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.4200041315631395, 'Time_per_iteration_avg': 3.05485565662384, 'Final_acc_avg': 0.9298333333333334}\n"
-     ]
-    }
-   ],
-   "source": [
-    "dataset = DatasetNames.mnist\n",
-    "n_clients = 100\n",
-    "perc_malicious = 10\n",
-    "attack = AttackNames.random_weights_attack\n",
-    "detection = DetectionNames.fgfl_detection\n",
-    "\n",
-    "test_path = \"./outputs/\" + get_output_path(dataset, n_clients, perc_malicious, attack, detection)\n",
-    "metrics = get_metrics(test_path)\n",
-    "print(metrics)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "167de65d",
    "metadata": {},
@@ -153,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "02eea377",
    "metadata": {},
    "outputs": [],
@@ -194,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "9f5369d1",
    "metadata": {},
    "outputs": [
@@ -231,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "223f5271",
    "metadata": {},
    "outputs": [
@@ -254,6 +228,46 @@
     "perc_malicious = [0]\n",
     "attacks = [AttackNames.no_attack]\n",
     "detections = [DetectionNames.no_detection]\n",
+    "\n",
+    "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "007a5734",
+   "metadata": {},
+   "source": [
+    "## Benchmark Runs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76608e56",
+   "metadata": {},
+   "source": [
+    "### MNIST"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "febd1959",
+   "metadata": {},
+   "source": [
+    "#### Delta_DAGMM detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baf2b4e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = DatasetNames.mnist\n",
+    "n_clients = [10, 100]\n",
+    "perc_malicious = [0.1, 0.3, 0.7]\n",
+    "attacks = [AttackNames.random_weights_attack, AttackNames.advanced_delta_weights_attack, AttackNames.advanced_free_rider_attack, AttackNames.adaptive_attack]\n",
+    "detections = [DetectionNames.delta_dagmm_detection]\n",
     "\n",
     "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
    ]
