--- a/train_delta_dagmm_cifar10_100.ipynb
+++ b/train_delta_dagmm_cifar10_100.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9bdd220c",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9caa1879",
    "metadata": {},
    "outputs": [],
@@ -342,24 +342,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "163c124a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using parameters:\t epoch=20, n_gmm=2\n",
-      "Epoch 1/20: \t\tloss=40957.039230 \t\treconst=0.112977 energy=3.682691 cov_diag=40953.243561\n",
-      "Epoch 2/20: \t\tloss=14367.685763 \t\treconst=0.388006 energy=3.959319 cov_diag=14363.338438\n",
-      "Epoch 3/20: \t\tloss=14282.625546 \t\treconst=0.696769 energy=3.957855 cov_diag=14277.970922\n",
-      "Epoch 4/20: \t\tloss=14067.686297 \t\treconst=1.475520 energy=3.931689 cov_diag=14062.279087\n",
-      "Epoch 5/20: \t\tloss=13689.718773 \t\treconst=1.310654 energy=3.898184 cov_diag=13684.509935\n",
-      "Epoch 10/20: \t\tloss=12401.497025 \t\treconst=3.492579 energy=3.932389 cov_diag=12394.072056\n",
-      "Epoch 20/20: \t\tloss=11626.115854 \t\treconst=6.896260 energy=3.982021 cov_diag=11615.237573\n",
-      "Obtained score: 15.93108321160189\n",
-      "\t\t!!! New best model found !!!\n"
+     "ename": "NameError",
+     "evalue": "name 'input_dim' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdagmm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdelta_dagmm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdelta_dagmm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DELTA_DAGMM\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Fixed Model settings\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m dimensions \u001b[38;5;241m=\u001b[39m [\u001b[43minput_dim\u001b[49m, \u001b[38;5;241m2048\u001b[39m, \u001b[38;5;241m512\u001b[39m, \u001b[38;5;241m128\u001b[39m]\n\u001b[1;32m      6\u001b[0m latent_dim \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m32\u001b[39m\n\u001b[1;32m      7\u001b[0m estimation_hidden_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'input_dim' is not defined"
      ]
     }
    ],
@@ -456,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "55ef4448",
    "metadata": {},
    "outputs": [
@@ -491,7 +486,7 @@
        ")"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "79f16ce7",
    "metadata": {},
    "outputs": [],
@@ -524,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "db9bd205",
    "metadata": {},
    "outputs": [
@@ -532,7 +527,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of train energies:  32.942664390007415\n",
+      "Mean of train energies:  32.942664638896105\n",
       "Mean of test energies:  31.064938917087726\n",
       "Mean of malicious energies:  56.596513438845605\n"
      ]
@@ -549,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "33ddd927",
    "metadata": {},
    "outputs": [
@@ -558,6 +553,14 @@
      "output_type": "stream",
      "text": [
       "Mean of random energies (R=e-2):  1599.443118395669\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_61207/2683175453.py:5: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at /pytorch/torch/csrc/utils/tensor_new.cpp:254.)\n",
+      "  data_loader = DataLoader(TensorDataset(torch.tensor(data, dtype=torch.float32)),\n"
      ]
     }
    ],
@@ -568,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "ceceedd7",
    "metadata": {},
    "outputs": [
@@ -660,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "e468585c",
    "metadata": {},
    "outputs": [
@@ -670,7 +673,7 @@
      "text": [
       "95 percentile is: 56.4623\n",
       "\n",
-      "Anomaly Threshold (at 1.0 * 95th percentile of all energies): 56.4623\n",
+      "Anomaly Threshold (at 1.5 * 95th percentile of all energies): 84.6934\n",
       "99th percentile test energy:  91.15935547045648\n"
      ]
     }
@@ -679,7 +682,7 @@
     "percentile = 95\n",
     "threshold_percentile = np.percentile(test_energies, percentile)\n",
     "print(f\"{percentile} percentile is: {threshold_percentile:.4f}\")\n",
-    "factor = 1.0\n",
+    "factor = 1.5\n",
     "additional = 0.0\n",
     "threshold = threshold_percentile * factor + additional\n",
     "\n",
@@ -689,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "f7338674",
    "metadata": {},
    "outputs": [
