--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  no_detection\n",
-      "Selected 0 malicious clients out of 100\n",
-      "Malicious client IDs: []\n",
-      "num_gpus:  0.041666666666666664\n"
+      "Using the detection method:  delta_dagmm\n",
+      "Selected 3 malicious clients out of 10\n",
+      "Malicious client IDs: [0, 1, 4]\n",
+      "num_gpus:  0.1\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
     "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.0\n",
+    "PERCENT_MALICIOUS = 0.3\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
@@ -61,10 +61,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.no_attack\n",
+    "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.no_detection\n",
+    "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
     "\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
