--- a/train_delta_dagmm_mnist_10.ipynb
+++ b/train_delta_dagmm_mnist_10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "11310a24",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "9bdd220c",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "9caa1879",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "d588ad55",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "55ef4448",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
        ")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "79f16ce7",
    "metadata": {},
    "outputs": [],
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "db9bd205",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of train energies:  -0.43165887869787317\n",
+      "Mean of train energies:  -0.4316588729510613\n",
       "Mean of test energies:  -3.2861334614038746\n",
       "Mean of malicious energies:  9.633927913863111\n"
      ]
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "33ddd927",
    "metadata": {},
    "outputs": [
@@ -567,6 +567,14 @@
      "output_type": "stream",
      "text": [
       "Mean of random energies (R=e-2):  75.51163823133933\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_32464/2683175453.py:5: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at /pytorch/torch/csrc/utils/tensor_new.cpp:254.)\n",
+      "  data_loader = DataLoader(TensorDataset(torch.tensor(data, dtype=torch.float32)),\n"
      ]
     }
    ],
@@ -577,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "ceceedd7",
    "metadata": {},
    "outputs": [
@@ -679,7 +687,7 @@
      "text": [
       "95 percentile is: 0.5518\n",
       "\n",
-      "Anomaly Threshold (at 11.0 * 95th percentile of all energies): 6.0696\n",
+      "Anomaly Threshold (at 15.0 * 95th percentile of all energies): 8.2768\n",
       "99th percentile test energy:  4.728921807949506\n"
      ]
     }
@@ -688,7 +696,7 @@
     "percentile = 95\n",
     "threshold_percentile = np.percentile(test_energies, percentile)\n",
     "print(f\"{percentile} percentile is: {threshold_percentile:.4f}\")\n",
-    "factor = 11.0\n",
+    "factor = 15.0\n",
     "threshold = threshold_percentile * factor\n",
     "\n",
     "print(f\"\\nAnomaly Threshold (at {factor} * {percentile}th percentile of all energies): {threshold:.4f}\")\n",
