--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  delta_dagmm\n",
+      "Using the detection method:  viceroy\n",
       "Selected 3 malicious clients out of 10\n",
       "Malicious client IDs: [0, 1, 4]\n",
       "num_gpus:  0.1\n"
@@ -46,7 +46,7 @@
     "DATASET = DatasetNames.mnist\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 100\n",
+    "NUM_CLIENTS = 10\n",
     "\n",
     "# Number of federation rounds\n",
     "NUM_ROUNDS = 20\n",
@@ -61,10 +61,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
+    "ATTACK_METHOD = AttackNames.adaptive_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
+    "DETECTION_METHOD = DetectionNames.viceroy_detection\n",
     "\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
@@ -120,15 +120,15 @@
     "    }\n",
     "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.rffl_detection.value:\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"alpha\"] = 0.95\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"alpha\"] = 0.95  # 0.95 is specified by the authors\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"beta\"] = 1/(3*NUM_CLIENTS)\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"gamma\"] = 0.5 if DATASET.value == \"mnist\" else 0.15  # TODO see if this values are good (0.5 for MNIST and 0.15 for CIFAR10 specified by the authors)\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"gamma\"] = 0.5 if DATASET.value == \"mnist\" else 0.15  # 0.5 for MNIST and 0.15 for CIFAR10 specified by the authors\n",
     "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.fgfl_detection.value:\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"stds\"] = 3    # The amount of standard deviations to substract from the mean. Higher -> higher precision, lower recall. Lower -> lower precision, higher recall\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"stds\"] = 2.1    # The amount of standard deviations to substract from the mean. Higher -> higher precision, lower recall. Lower -> lower precision, higher recall\n",
     "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.fdfl_detection.value:\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"tau\"] = 0.2    # If the cosine similarity of two submitted data distributions for two clients of the same cluster is smaller than tau,\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"tau\"] = 0.4    # If the cosine similarity of two submitted data distributions for two clients of the same cluster is smaller than tau,\n",
     "                                                # i.e. they are not very similar, the flag counter will be increased (if flag is very high, it will be marked as a free rider).\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"n_clusters\"] = 5 if NUM_CLIENTS == 100 else 3       # Use 5 for 100 clients and 3 for 10 clients\n",
     "    method = \"weak\"     # Perform either 'weak' or 'strong' imitation of label distributions.\n",
@@ -150,7 +150,7 @@
     "    epsilon = 0.02 if NUM_CLIENTS == 10 else 0.01\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"epsilon\"] = epsilon    # Determines how strict the threshold distinguishes between benign clients and free riders.\n",
     "                                                        # Choosing a low value results in low FP but may miss free riders whereas a high value may results in FPs.\n",
-    "\n",
+    "# ________________________________________________________________________________________________________________________________________________\n",
     "print(\"Using the detection method: \", DETECTION_METHOD.value)\n",
     "if \"dagmm\" in DETECTION_METHOD.value and ADDITIONAL_DETECTION_CONFIG and ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
     "    if PERCENT_MALICIOUS != 0.0 and ATTACK_METHOD != AttackNames.no_attack:\n",
