Adjusted hyperparameter for WEF.

--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "90d475e7",
    "metadata": {},
    "outputs": [
@@ -584,77 +584,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mnist--n=10--10%--random_weights--rffl:\n",
-      " {'TP_avg': 1.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.059072143494653645, 'Time_per_iteration_avg': 3.4714203159014385, 'Final_acc_avg': 0.9854666666666668} \n",
+      "mnist--n=10--10%--random_weights--viceroy:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 7.0, 'FN_avg': 0.0, 'Precision_avg': 0.125, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.20465078965241812, 'Time_per_iteration_avg': 2.4725465416908263, 'Final_acc_avg': 0.9511333333333333} \n",
       "\n",
-      "mnist--n=10--10%--advanced_delta_weights--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 1.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.496500527858734, 'Final_acc_avg': 0.9856333333333334} \n",
+      "mnist--n=10--10%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.6666666666666666, 'FN_avg': 1.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.3761274973551436, 'Final_acc_avg': 0.9865333333333334} \n",
       "\n",
-      "mnist--n=10--10%--advanced_free_rider--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 1.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.435094408194224, 'Final_acc_avg': 0.9865} \n",
+      "mnist--n=10--10%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 1.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.4464804569880165, 'Final_acc_avg': 0.9852333333333334} \n",
       "\n",
-      "mnist--n=10--10%--adaptive--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 1.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.4393803675969443, 'Final_acc_avg': 0.9874} \n",
+      "mnist--n=10--10%--adaptive--viceroy:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.6666666666666666, 'FN_avg': 1.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.4347713351249696, 'Final_acc_avg': 0.9864333333333333} \n",
       "\n",
-      "mnist--n=10--30%--random_weights--rffl:\n",
-      " {'TP_avg': 3.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.05477267385991876, 'Time_per_iteration_avg': 3.2931492765744523, 'Final_acc_avg': 0.9845666666666667} \n",
+      "mnist--n=10--30%--random_weights--viceroy:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 1.0, 'FN_avg': 0.0, 'Precision_avg': 0.8333333333333334, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.12870523543807813, 'Time_per_iteration_avg': 3.243338676293691, 'Final_acc_avg': 0.9832000000000001} \n",
       "\n",
-      "mnist--n=10--30%--advanced_delta_weights--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.350785386562347, 'Final_acc_avg': 0.9845333333333333} \n",
+      "mnist--n=10--30%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.1294168852734904, 'Time_per_iteration_avg': 3.244795874754588, 'Final_acc_avg': 0.9871} \n",
       "\n",
-      "mnist--n=10--30%--advanced_free_rider--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.30681608915329, 'Final_acc_avg': 0.9855999999999999} \n",
+      "mnist--n=10--30%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.14783629061646336, 'Time_per_iteration_avg': 3.2202749013900758, 'Final_acc_avg': 0.9864333333333333} \n",
       "\n",
-      "mnist--n=10--30%--adaptive--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.3211865584055587, 'Final_acc_avg': 0.9847333333333333} \n",
+      "mnist--n=10--30%--adaptive--viceroy:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.15882323994780134, 'Time_per_iteration_avg': 3.2192075411478682, 'Final_acc_avg': 0.9849333333333333} \n",
       "\n",
-      "mnist--n=10--70%--random_weights--rffl:\n",
-      " {'TP_avg': 7.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.08278170725543117, 'Time_per_iteration_avg': 3.16473925113678, 'Final_acc_avg': 0.9702999999999999} \n",
+      "mnist--n=10--70%--random_weights--viceroy:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2297675212224326, 'Final_acc_avg': 0.7209333333333333} \n",
       "\n",
-      "mnist--n=10--70%--advanced_delta_weights--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.3141200423240664, 'Final_acc_avg': 0.9744999999999999} \n",
+      "mnist--n=10--70%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 7.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.26003541974776473, 'Time_per_iteration_avg': 3.095221439997355, 'Final_acc_avg': 0.9774666666666666} \n",
       "\n",
-      "mnist--n=10--70%--advanced_free_rider--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2206206440925595, 'Final_acc_avg': 0.9715666666666666} \n",
+      "mnist--n=10--70%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 7.0, 'FP_avg': 0.3333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.9583333333333334, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.27641652993468785, 'Time_per_iteration_avg': 2.9662371198336284, 'Final_acc_avg': 0.9786666666666667} \n",
       "\n",
-      "mnist--n=10--70%--adaptive--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2048732797304793, 'Final_acc_avg': 0.9744666666666667} \n",
+      "mnist--n=10--70%--adaptive--viceroy:\n",
+      " {'TP_avg': 7.0, 'FP_avg': 0.3333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.9583333333333334, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.239435821180406, 'Time_per_iteration_avg': 3.0404820005098983, 'Final_acc_avg': 0.9769333333333333} \n",
       "\n",
-      "mnist--n=100--10%--random_weights--rffl:\n",
-      " {'TP_avg': 10.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.3853327545153851, 'Time_per_iteration_avg': 3.1555082917213437, 'Final_acc_avg': 0.9302666666666667} \n",
+      "mnist--n=100--10%--random_weights--viceroy:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 20.666666666666668, 'FN_avg': 0.0, 'Precision_avg': 0.3434011164274322, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.31422967094006765, 'Time_per_iteration_avg': 3.3392159700393678, 'Final_acc_avg': 0.9296333333333333} \n",
       "\n",
-      "mnist--n=100--10%--advanced_delta_weights--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 10.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2269304434458412, 'Final_acc_avg': 0.9286333333333333} \n",
+      "mnist--n=100--10%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 19.0, 'FN_avg': 0.0, 'Precision_avg': 0.363762777555881, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.3547204199104124, 'Time_per_iteration_avg': 3.342164937655131, 'Final_acc_avg': 0.9296666666666668} \n",
       "\n",
-      "mnist--n=100--10%--advanced_free_rider--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 10.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.201646633942922, 'Final_acc_avg': 0.9280666666666667} \n",
+      "mnist--n=100--10%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 21.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.3196480938416422, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.3554561856570399, 'Time_per_iteration_avg': 3.3330950339635215, 'Final_acc_avg': 0.9315333333333333} \n",
       "\n",
-      "mnist--n=100--10%--adaptive--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 10.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2289186080296837, 'Final_acc_avg': 0.9312} \n",
+      "mnist--n=100--10%--adaptive--viceroy:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 16.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.38139329805996475, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.33713790339441657, 'Time_per_iteration_avg': 3.536868453025818, 'Final_acc_avg': 0.9301} \n",
       "\n",
-      "mnist--n=100--30%--random_weights--rffl:\n",
-      " {'TP_avg': 30.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.3324603867786528, 'Time_per_iteration_avg': 2.8291774352391563, 'Final_acc_avg': 0.9217666666666666} \n",
+      "mnist--n=100--30%--random_weights--viceroy:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 34.666666666666664, 'FN_avg': 0.0, 'Precision_avg': 0.47352773013150373, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.3441807655335298, 'Time_per_iteration_avg': 2.4583740830421448, 'Final_acc_avg': 0.9236} \n",
       "\n",
-      "mnist--n=100--30%--advanced_delta_weights--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 2.991097148259481, 'Final_acc_avg': 0.9276333333333332} \n",
+      "mnist--n=100--30%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 19.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.6154772812107638, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.43321082548174683, 'Time_per_iteration_avg': 2.794026871522268, 'Final_acc_avg': 0.9310333333333333} \n",
       "\n",
-      "mnist--n=100--30%--advanced_free_rider--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.135701358318329, 'Final_acc_avg': 0.9274} \n",
+      "mnist--n=100--30%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 24.666666666666668, 'FN_avg': 0.0, 'Precision_avg': 0.5532012440677546, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.4028273236810305, 'Time_per_iteration_avg': 2.6752384384473165, 'Final_acc_avg': 0.93} \n",
       "\n",
-      "mnist--n=100--30%--adaptive--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.1818882544835407, 'Final_acc_avg': 0.9267} \n",
+      "mnist--n=100--30%--adaptive--viceroy:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 21.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.6327023356415888, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.3646800298554787, 'Time_per_iteration_avg': 2.8143599470456437, 'Final_acc_avg': 0.9329666666666666} \n",
       "\n",
-      "mnist--n=100--70%--random_weights--rffl:\n",
-      " {'TP_avg': 70.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.6684453950980483, 'Time_per_iteration_avg': 2.249059824148814, 'Final_acc_avg': 0.8836333333333334} \n",
+      "mnist--n=100--70%--random_weights--viceroy:\n",
+      " {'TP_avg': 70.0, 'FP_avg': 17.0, 'FN_avg': 0.0, 'Precision_avg': 0.8104182818892923, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.9164361692154831, 'Time_per_iteration_avg': 2.0698270360628763, 'Final_acc_avg': 0.8426333333333332} \n",
       "\n",
-      "mnist--n=100--70%--advanced_delta_weights--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 2.819324477513631, 'Final_acc_avg': 0.9198666666666666} \n",
+      "mnist--n=100--70%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 70.0, 'FP_avg': 7.0, 'FN_avg': 0.0, 'Precision_avg': 0.9091931460352513, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.31888598753178693, 'Time_per_iteration_avg': 2.3066006382306417, 'Final_acc_avg': 0.9282333333333334} \n",
       "\n",
-      "mnist--n=100--70%--advanced_free_rider--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.053984502951304, 'Final_acc_avg': 0.9130333333333334} \n",
+      "mnist--n=100--70%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 70.0, 'FP_avg': 6.333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.9174909174909175, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.3413336693826469, 'Time_per_iteration_avg': 2.328803531328837, 'Final_acc_avg': 0.9278333333333334} \n",
       "\n",
-      "mnist--n=100--70%--adaptive--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.196063975493113, 'Final_acc_avg': 0.9235666666666668} \n",
+      "mnist--n=100--70%--adaptive--viceroy:\n",
+      " {'TP_avg': 70.0, 'FP_avg': 5.333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.9293504030346136, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.5455103908029587, 'Time_per_iteration_avg': 2.337354648113251, 'Final_acc_avg': 0.9329999999999999} \n",
       "\n"
      ]
     }
