--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  viceroy\n",
-      "Selected 3 malicious clients out of 10\n",
-      "Malicious client IDs: [0, 1, 4]\n",
-      "num_gpus:  0.1\n"
+      "Using the detection method:  wef\n",
+      "Selected 10 malicious clients out of 100\n",
+      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
+      "num_gpus:  0.041666666666666664\n"
      ]
     }
    ],
@@ -46,13 +46,13 @@
     "DATASET = DatasetNames.mnist\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 10\n",
+    "NUM_CLIENTS = 100\n",
     "\n",
     "# Number of federation rounds\n",
     "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.3\n",
+    "PERCENT_MALICIOUS = 0.1\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
@@ -64,7 +64,7 @@
     "ATTACK_METHOD = AttackNames.adaptive_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.viceroy_detection\n",
+    "DETECTION_METHOD = DetectionNames.wef_detection\n",
     "\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
@@ -147,8 +147,7 @@
     "                                                                # and 1 a very unsuspicious one.\n",
     "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.wef_detection.value:\n",
-    "    epsilon = 0.02 if NUM_CLIENTS == 10 else 0.01\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"epsilon\"] = epsilon    # Determines how strict the threshold distinguishes between benign clients and free riders.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"epsilon\"] = 0.02       # Determines how strict the threshold distinguishes between benign clients and free riders.\n",
     "                                                        # Choosing a low value results in low FP but may miss free riders whereas a high value may results in FPs.\n",
     "# ________________________________________________________________________________________________________________________________________________\n",
     "print(\"Using the detection method: \", DETECTION_METHOD.value)\n",
