--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -668,6 +668,109 @@
     "\n",
     "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acc74e12",
+   "metadata": {},
+   "source": [
+    "#### WEF detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "02490680",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mnist--n=10--10%--random_weights--wef:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.12792313794326263, 'Time_per_iteration_avg': 3.4385547240575156, 'Final_acc_avg': 0.9866333333333334} \n",
+      "\n",
+      "mnist--n=10--10%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 1.6666666666666667, 'FN_avg': 0.0, 'Precision_avg': 0.38888888888888884, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.11689645330916087, 'Time_per_iteration_avg': 3.4108649373054507, 'Final_acc_avg': 0.9857666666666667} \n",
+      "\n",
+      "mnist--n=10--10%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 2.0, 'FN_avg': 0.0, 'Precision_avg': 0.3611111111111111, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.1108382678203917, 'Time_per_iteration_avg': 3.4112536032994587, 'Final_acc_avg': 0.9860666666666668} \n",
+      "\n",
+      "mnist--n=10--10%--adaptive--wef:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 1.6666666666666667, 'FN_avg': 0.0, 'Precision_avg': 0.38888888888888884, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.11342040623095946, 'Time_per_iteration_avg': 3.5140660961469017, 'Final_acc_avg': 0.9853000000000001} \n",
+      "\n",
+      "mnist--n=10--30%--random_weights--wef:\n",
+      " {'TP_avg': 2.3333333333333335, 'FP_avg': 0.0, 'FN_avg': 0.6666666666666666, 'Precision_avg': 1.0, 'Recall_avg': 0.7777777777777777, 'Effectiveness_avg': 0.05359101831507033, 'Time_per_iteration_avg': 3.279340183734894, 'Final_acc_avg': 0.9523999999999999} \n",
+      "\n",
+      "mnist--n=10--30%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 2.6666666666666665, 'FP_avg': 0.6666666666666666, 'FN_avg': 0.3333333333333333, 'Precision_avg': 0.8055555555555555, 'Recall_avg': 0.8888888888888888, 'Effectiveness_avg': 0.11511447275671145, 'Time_per_iteration_avg': 3.316174193223317, 'Final_acc_avg': 0.9852666666666666} \n",
+      "\n",
+      "mnist--n=10--30%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 2.6666666666666665, 'FP_avg': 1.0, 'FN_avg': 0.3333333333333333, 'Precision_avg': 0.7222222222222222, 'Recall_avg': 0.8888888888888888, 'Effectiveness_avg': 0.10983315121216293, 'Time_per_iteration_avg': 3.309959141413371, 'Final_acc_avg': 0.9847} \n",
+      "\n",
+      "mnist--n=10--30%--adaptive--wef:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 1.0, 'FN_avg': 0.0, 'Precision_avg': 0.75, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.13316080333537753, 'Time_per_iteration_avg': 3.351805539925893, 'Final_acc_avg': 0.9843999999999999} \n",
+      "\n",
+      "mnist--n=10--70%--random_weights--wef:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 2.0, 'FN_avg': 6.0, 'Precision_avg': 0.24444444444444446, 'Recall_avg': 0.14285714285714285, 'Effectiveness_avg': -0.15184733098665823, 'Time_per_iteration_avg': 3.2269265532493594, 'Final_acc_avg': 0.32033333333333336} \n",
+      "\n",
+      "mnist--n=10--70%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 1.6666666666666667, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2048448204994204, 'Final_acc_avg': 0.9551333333333334} \n",
+      "\n",
+      "mnist--n=10--70%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 1.0, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2615496476491295, 'Final_acc_avg': 0.9535666666666667} \n",
+      "\n",
+      "mnist--n=10--70%--adaptive--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 1.3333333333333333, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2512890140215553, 'Final_acc_avg': 0.9574333333333334} \n",
+      "\n",
+      "mnist--n=100--10%--random_weights--wef:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.31818015731385746, 'Time_per_iteration_avg': 3.1693077286084494, 'Final_acc_avg': 0.9194333333333334} \n",
+      "\n",
+      "mnist--n=100--10%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 8.333333333333334, 'FN_avg': 0.0, 'Precision_avg': 0.556390977443609, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.3024473120580815, 'Time_per_iteration_avg': 3.222026805082957, 'Final_acc_avg': 0.9324} \n",
+      "\n",
+      "mnist--n=100--10%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 11.333333333333334, 'FN_avg': 0.0, 'Precision_avg': 0.4905646469113962, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.28005306670626523, 'Time_per_iteration_avg': 3.2557817300160727, 'Final_acc_avg': 0.9323333333333332} \n",
+      "\n",
+      "mnist--n=100--10%--adaptive--wef:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 11.0, 'FN_avg': 0.0, 'Precision_avg': 0.48162787293222076, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.24050229245319335, 'Time_per_iteration_avg': 3.2882492661476133, 'Final_acc_avg': 0.9343333333333333} \n",
+      "\n",
+      "mnist--n=100--30%--random_weights--wef:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 20.666666666666668, 'FN_avg': 0.0, 'Precision_avg': 0.5981384307846077, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.37433332634409777, 'Time_per_iteration_avg': 2.991047660509745, 'Final_acc_avg': 0.8999666666666667} \n",
+      "\n",
+      "mnist--n=100--30%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 20.666666666666668, 'FP_avg': 13.333333333333334, 'FN_avg': 9.333333333333334, 'Precision_avg': 0.599936766034327, 'Recall_avg': 0.688888888888889, 'Effectiveness_avg': 0.1941736014733307, 'Time_per_iteration_avg': 3.074620044231415, 'Final_acc_avg': 0.9317666666666667} \n",
+      "\n",
+      "mnist--n=100--30%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 9.333333333333334, 'FP_avg': 10.333333333333334, 'FN_avg': 20.666666666666668, 'Precision_avg': 0.4338945005611672, 'Recall_avg': 0.3111111111111111, 'Effectiveness_avg': 0.08747166995094295, 'Time_per_iteration_avg': 3.196598931153615, 'Final_acc_avg': 0.9283333333333333} \n",
+      "\n",
+      "mnist--n=100--30%--adaptive--wef:\n",
+      " {'TP_avg': 28.666666666666668, 'FP_avg': 19.333333333333332, 'FN_avg': 1.3333333333333333, 'Precision_avg': 0.5972222222222222, 'Recall_avg': 0.9555555555555556, 'Effectiveness_avg': 0.3292859610956573, 'Time_per_iteration_avg': 3.217502176761627, 'Final_acc_avg': 0.9263} \n",
+      "\n",
+      "mnist--n=100--70%--random_weights--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 30.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 2.777683381239573, 'Final_acc_avg': 0.11683333333333334} \n",
+      "\n",
+      "mnist--n=100--70%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 20.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 2.7966136972109474, 'Final_acc_avg': 0.9108} \n",
+      "\n",
+      "mnist--n=100--70%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 19.666666666666668, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.124579719702403, 'Final_acc_avg': 0.8998333333333334} \n",
+      "\n",
+      "mnist--n=100--70%--adaptive--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 20.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.5213396271069843, 'Final_acc_avg': 0.9116} \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = DatasetNames.mnist\n",
+    "n_clients = [10, 100]\n",
+    "perc_malicious = [10, 30, 70]\n",
+    "attacks = [AttackNames.random_weights_attack, AttackNames.advanced_delta_weights_attack, AttackNames.advanced_free_rider_attack, AttackNames.adaptive_attack]\n",
+    "detections = [DetectionNames.wef_detection]\n",
+    "\n",
+    "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
+   ]
   }
  ],
  "metadata": {
