--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -23,9 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  wef\n",
-      "Selected 10 malicious clients out of 100\n",
-      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
+      "Using the detection method:  no_detection\n",
+      "Selected 0 malicious clients out of 100\n",
+      "Malicious client IDs: []\n",
       "num_gpus:  0.041666666666666664\n"
      ]
     }
@@ -43,28 +43,28 @@
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "\n",
     "# Dataset (mnist or cifar10)\n",
-    "DATASET = DatasetNames.mnist\n",
+    "DATASET = DatasetNames.cifar10\n",
     "\n",
     "# Number of clients\n",
     "NUM_CLIENTS = 100\n",
     "\n",
-    "# Number of federation rounds\n",
-    "NUM_ROUNDS = 20\n",
+    "# Number of federation rounds. Use 20 for everything except for CIFAR10 with 100 clients, where we use 40\n",
+    "NUM_ROUNDS = 20 if DATASET == DatasetNames.mnist or (DATASET == DatasetNames.cifar10 and NUM_CLIENTS == 10) else 40\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.1\n",
+    "PERCENT_MALICIOUS = 0.0\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
     "\n",
     "# If true, plots about the loss and accuracy will be generated on wandb.\n",
-    "USE_WANDB = False\n",
+    "USE_WANDB = True\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.adaptive_attack\n",
+    "ATTACK_METHOD = AttackNames.no_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.wef_detection\n",
+    "DETECTION_METHOD = DetectionNames.no_detection\n",
     "\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
